--- a/Export_index_ORM/Commit.cls
+++ b/Export_index_ORM/Commit.cls
@@ -2,43 +2,31 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "Entity"
+Attribute VB_Name = "Commit"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
 '@PredeclaredId
-'@Folder "ORM.Entities"
+'@Folder "ORM.Commits"
 Option Compare Database
 Option Explicit
 
 Implements IRecord
 
 ' Variables
-Private Type TEntity
+Private Type TCommit
     ID As Double
     Name As String
-    Parent As Entity
-    EntityType As EntityType
+    IsClosed As Boolean
+    'Tracks As Tracks
 End Type
 
-Private this As TEntity
+Private this As TCommit
 
 ' Unique Properties
-Public Property Get Parent() As Entity
-     Set Parent = this.Parent
-End Property
-
-Public Property Set Parent(ByVal Parent As Entity)
-    Set this.Parent = Parent
-End Property
-
-Public Property Get EntityType() As EntityType
-     Set EntityType = this.EntityType
-End Property
-
-Public Property Set EntityType(ByVal EntityType As EntityType)
-    Set this.EntityType = EntityType
+Public Property Get IsClosed() As Boolean
+    IsClosed = this.IsClosed
 End Property
 
 ' Common Properties
@@ -79,19 +67,17 @@ End Property
 
 ' Methods
 Private Function IRecord_Create(ByRef rs As Recordset) As IRecord
-    Set IRecord_Create = New Entity
+    Set IRecord_Create = New Commit
     With IRecord_Create
         .ID = rs.Fields("ID")
-        .Name = rs.Fields(ENTITY_FIELDNAME)
+        .Name = rs.Fields(COMMIT_FIELDNAME)
+        .IsClosed = IsNull(rs.Fields("Closed")) ' TODO Const this
     End With
 End Function
 
 Public Function ToString() As String
     ToString = this.ID & "# " & this.Name
-    If Not this.Parent Is Nothing Then
-        ToString = ToString & ", Parent = " & this.Parent.Name
-    End If
-    If Not this.EntityType Is Nothing Then
-        ToString = ToString & ", EntityType = " & this.EntityType.Name
-    End If
+    'If Not this.Parent Is Nothing Then
+    '    ToString = ToString & ", Parent = " & this.Parent.Name
+    'End If
 End Function
