--- a/Export_index_ORM/Tracks.cls
+++ b/Export_index_ORM/Tracks.cls
@@ -2,24 +2,24 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "Commits"
+Attribute VB_Name = "Tracks"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-'@Folder "ORM.Commits"
+'@Folder "ORM.Tracks"
 Option Compare Database
 Option Explicit
 
 Implements IRecordCollection
 
 ' Variables
-Private Type TCommits
+Private Type TTracks
     Items As Collection
     TableName As String
 End Type
 
-Private this As TCommits
+Private this As TTracks
 
 ' Properties
 '@DefaultMember
@@ -48,7 +48,7 @@ Public Property Let TableName(ByVal TableName As String)
     this.TableName = TableName
 End Property
 
-Public Property Get Self() As Commits
+Public Property Get Self() As Tracks
     Set Self = Me
 End Property
 
@@ -80,7 +80,7 @@ End Sub
 
 ' Methods
 Public Sub Load()
-    LoadFromRecordset this.Items, COMMITS_TABLE, Commit
+    LoadFromRecordset this.Items, TRACKS_TABLE, Track
 End Sub
 
 Public Sub Clear()
@@ -97,8 +97,6 @@ Private Sub IRecordCollection_Clear()
 End Sub
 
 Private Function IRecordCollection_GetByID(ByVal ID As Double) As IRecord
-    Set IRecordCollection_GetByID = this.Items.Item(COLLECTION_INDEX_PREFIX & ID)
-    Exit Function
     Dim cmt As IRecord
     For Each cmt In this.Items
         If cmt.ID = ID Then
@@ -109,17 +107,32 @@ Private Function IRecordCollection_GetByID(ByVal ID As Double) As IRecord
 End Function
 
 ' Public Methods
-Public Function GetByID(ByVal ID As Double) As Commit
+Public Function GetByCommit(ByRef Commit As Commit) As IRecordCollection
+    Set GetByCommit = New Tracks
+    With GetByCommit
+        .TableName = Me.TableName
+    End With
+    
+    Dim trk As Track
+    For Each trk In this.Items
+        If trk.Commit Is Commit Then
+            GetByCommit.Items.Add trk
+        End If
+    Next trk
+End Function
+
+Public Function GetByID(ByVal ID As Double) As Track
     Set GetByID = IRecordCollection_GetByID(ID)
 End Function
 
 Public Sub MapRefs(ByRef externalCollection As IRecordCollection)
-    Dim cmt As Commit
-    Dim Tracks As Tracks
-    Set Tracks = externalCollection
-    For Each cmt In this.Items
-        Set cmt.Tracks = Tracks.GetByCommit(cmt)
-    Next cmt
+    Dim trk As Track
+    Dim foreignKey As Double
+    
+    For Each trk In this.Items
+        foreignKey = GetFieldValue(TRACKS_TABLE, trk.ID, TRACK_COMMITFK_FIELDNAME)
+        Set trk.Commit = externalCollection.GetByID(foreignKey)
+    Next trk
 End Sub
 
 ' Private Methods
