--- a/Export_index_ORM/DetailValue.cls
+++ b/Export_index_ORM/DetailValue.cls
@@ -26,6 +26,11 @@ End Type
 Private this As TDetailValue
 
 ' Unique Properties
+Public Property Get IsLatest() As Boolean
+    Debug.Assert Not this.Track Is Nothing
+    IsLatest = (this.Track.ValidUntil = #12/31/9999#)
+End Property
+
 Public Property Get Parent() As DetailTable
     Set Parent = this.Parent
 End Property
@@ -94,16 +99,18 @@ Private Function IRecord_Create(ByRef rs As Recordset) As IRecord
     With result
         .ID = rs.Fields("ID")
         .Name = vbNullString ' These do not have name fields
-        Set .Entity = New Entity
-        .Entity.ID = CDbl(Nz(rs.Fields("EntityFK"), 0)) * -1
-        Set .Track = New Track
-        .Track.ID = CDbl(Nz(rs.Fields("TrackFK"), 0)) * -1
+        Set .Entity = modPlaceholderRecords.CreateEntity(Nz(rs.Fields("EntityFK"), 0))
+        Set .Track = modPlaceholderRecords.CreateTrack(Nz(rs.Fields("TrackFK"), 0))
     End With
     Set IRecord_Create = result
 End Function
 
+
 Public Function ToString() As String
     ToString = this.ID & "#"
+    If Not this.Parent Is Nothing Then
+        ToString = ToString & ", DetailTable = '" & this.Parent.Name & "'"
+    End If
     If Not this.Entity Is Nothing Then
         ToString = ToString & ", Entity = '" & this.Entity.Name & "'"
     End If
