--- a/Export_index_ORM/Track.cls
+++ b/Export_index_ORM/Track.cls
@@ -96,12 +96,13 @@ Private Function IRecord_Create(ByRef rs As Recordset) As IRecord
         .Name = rs.Fields(TRACK_FIELDNAME)
         .ValidFrom = rs.Fields(TRACK_VALIDFROM_FIELDNAME)
         .ValidUntil = rs.Fields(TRACK_VALIDUNTIL_FIELDNAME)
-        Set .Commit = New Commit
-        .Commit.ID = CDbl(rs.Fields("CommitFK")) * -1
+        Set .Commit = modPlaceholderRecords.CreateCommit(rs.Fields(TRACK_COMMITFK_FIELDNAME))
+        '.Commit.ID = CDbl(rs.Fields(TRACK_COMMITFK_FIELDNAME)) * -1
     End With
     
     Set IRecord_Create = result
 End Function
+
 
 Public Function ToString() As String
     ToString = this.ID & "# "
