--- a/Export_index_ORM/DetailField.cls
+++ b/Export_index_ORM/DetailField.cls
@@ -2,46 +2,57 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "Commit"
+Attribute VB_Name = "DetailField"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
 '@PredeclaredId
-'@Folder "ORM.Commits"
+'@Folder "ORM.DetailFields"
 Option Compare Database
 Option Explicit
 
 Implements IRecord
 
 ' Variables
-Private Type TCommit
+Private Type TDetailField
     ID As Double
     Name As String
-    IsClosed As Boolean
-    Tracks As Tracks
+    Parent As DetailTable
+    FieldType As String 'Field.Type
+    LookupTable As LookupTable
+    ' Caption,Default,Suffix,Width,Height,Format,TextAlign
 End Type
 
-Private this As TCommit
+Private this As TDetailField
 
 ' Unique Properties
-Public Property Get IsClosed() As Boolean
-    IsClosed = this.IsClosed
+Public Property Get DetailTable() As DetailTable
+    Set DetailTable = this.Parent
 End Property
 
-Public Property Let IsClosed(RHS As Boolean)
-    this.IsClosed = RHS
+Public Property Set DetailTable(ByVal RHS As DetailTable)
+    Set this.Parent = RHS
 End Property
 
-Public Property Get Tracks() As Tracks
-    Set Tracks = this.Tracks
+Public Property Get LookupTable() As LookupTable
+    Set LookupTable = this.LookupTable
 End Property
 
-Public Property Set Tracks(RHS As Tracks)
-    Set this.Tracks = RHS
+Public Property Set LookupTable(ByVal RHS As LookupTable)
+    Set this.LookupTable = RHS
+End Property
+
+Public Property Get FieldType() As String
+    FieldType = this.FieldType
+End Property
+
+Public Property Let FieldType(ByVal RHS As String)
+    this.FieldType = RHS
 End Property
 
 ' Common Properties
+
 '@DefaultMember
 Public Property Get Name() As String
 Attribute Name.VB_UserMemId = 0
@@ -79,12 +90,16 @@ End Property
 
 ' Methods
 Private Function IRecord_Create(ByRef rs As Recordset) As IRecord
-    Dim result As Commit
-    Set result = New Commit
+    Dim result As DetailField
+    Set result = New DetailField
     With result
         .ID = rs.Fields("ID")
-        .Name = rs.Fields(COMMIT_FIELDNAME)
-        .IsClosed = IsNull(rs.Fields(COMMIT_CLOSED_FIELDNAME))
+        .Name = rs.Fields("FieldName") ' TODO Const this
+        Set .DetailTable = New DetailTable
+        .DetailTable.Name = rs.Fields("TableName")
+        .FieldType = rs.Fields("FieldType")
+        Set .LookupTable = New LookupTable
+        .LookupTable.Name = Nz(rs.Fields("LookupTable"), vbNullString)
     End With
     Set IRecord_Create = result
 End Function
@@ -92,8 +107,8 @@ End Function
 
 Public Function ToString() As String
     ToString = this.ID & "# " & this.Name
-    ToString = ToString & ", IsClosed = " & Iif(IsClosed, "Yes", "No")
-    If Not this.Tracks Is Nothing Then
-        ToString = ToString & ", Tracks = " & this.Tracks.Count
+    ToString = ToString & ", DetailTable = " & this.Parent.Name
+    If Not this.LookupTable Is Nothing Then
+        ToString = ToString & ", LookupTable = " & this.LookupTable.Name
     End If
 End Function
