--- a/Export_index_ORM/DetailFields.cls
+++ b/Export_index_ORM/DetailFields.cls
@@ -2,24 +2,34 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "Tracks"
+Attribute VB_Name = "DetailFields"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-'@Folder "ORM.Tracks"
+'@Folder "ORM.DetailFields"
 Option Compare Database
 Option Explicit
 
 Implements IRecordCollection
 
 ' Variables
-Private Type TTracks
+Private Type TDetailFields
     Items As Collection
     TableName As String
+    Parent As DetailTable
 End Type
 
-Private this As TTracks
+Private this As TDetailFields
+
+' Unique Properties
+Public Property Get Parent() As DetailTable
+    Set Parent = this.Parent
+End Property
+
+Public Property Set Parent(ByVal DetailTable As DetailTable)
+    Set this.Parent = DetailTable
+End Property
 
 ' Properties
 '@DefaultMember
@@ -48,7 +58,7 @@ Public Property Let TableName(ByVal TableName As String)
     this.TableName = TableName
 End Property
 
-Public Property Get Self() As Tracks
+Public Property Get Self() As DetailFields
     Set Self = Me
 End Property
 
@@ -80,7 +90,7 @@ End Sub
 
 ' Methods
 Public Sub Load()
-    LoadFromRecordset this.Items, TRACKS_TABLE, Track
+    LoadFromRecordset this.Items, DETAILFIELDS_TABLE, DetailField
 End Sub
 
 Public Sub Clear()
@@ -97,42 +107,56 @@ Private Sub IRecordCollection_Clear()
 End Sub
 
 Private Function IRecordCollection_GetByID(ByVal ID As Double) As IRecord
-    Dim trk As Track
-    For Each trk In this.Items
-        If trk.ID = ID Then
-            Set IRecordCollection_GetByID = trk
-            Exit Function
-        End If
-    Next trk
+    Set IRecordCollection_GetByID = this.Items.Item(COLLECTION_INDEX_PREFIX & ID)
 End Function
 
 ' Public Methods
-Public Function GetByCommit(ByRef Commit As Commit) As IRecordCollection
-    Set GetByCommit = New Tracks
-    With GetByCommit
-        .TableName = Me.TableName
-    End With
-    
-    Dim trk As Track
-    For Each trk In this.Items
-        If trk.Commit Is Commit Then
-            GetByCommit.Items.Add trk
-        End If
-    Next trk
-End Function
-
-Public Function GetByID(ByVal ID As Double) As Track
+Public Function GetByID(ByVal ID As Double) As Commit
     Set GetByID = IRecordCollection_GetByID(ID)
 End Function
 
-Public Sub MapRefsCommits(ByRef externalCollection As IRecordCollection)
-    Dim trk As Track
-
-    For Each trk In this.Items
-        Set trk.Commit = externalCollection.GetByID(trk.Commit.ID)
-    Next trk
+Public Sub MapRefsDetailTables(ByRef externalCollection As IRecordCollection)
+    Dim detFld As DetailField
+    Dim detTbl As DetailTable
+    Dim DetailTables As DetailTables
+    Set DetailTables = externalCollection
+    
+    For Each detFld In this.Items
+        Set detTbl = DetailTables.GetByName(detFld.DetailTable.Name)
+        Set detFld.DetailTable = detTbl
+    Next detFld
 End Sub
 
+Public Sub MapRefsLookupTables(ByRef externalCollection As IRecordCollection)
+    Dim detFld As DetailField
+    Dim lkpTbl As LookupTable
+    Dim LookupTables As LookupTables
+    Set LookupTables = externalCollection
+    
+    For Each detFld In this.Items
+        If detFld.LookupTable.Name = vbNullString Then
+            Set detFld.LookupTable = Nothing
+        Else
+            Set lkpTbl = LookupTables.GetByName(detFld.LookupTable.Name)
+            Set detFld.LookupTable = lkpTbl
+        End If
+    Next detFld
+End Sub
+
+Public Function GetByDetailTable(ByRef DetailTable As DetailTable) As DetailFields
+    Dim result As DetailFields
+    Dim detFld As DetailField
+    
+    Set result = New DetailFields
+    
+    result.TableName = Me.TableName
+    
+    For Each detFld In this.Items
+        If detFld.DetailTable = DetailTable Then
+            result.Items.Add detFld, modConstants.COLLECTION_INDEX_PREFIX & detFld.ID
+        End If
+    Next detFld
+    
+    Set GetByDetailTable = result
+End Function
 ' Private Methods
-
-
