--- a/Export_index_ORM/Entity.cls
+++ b/Export_index_ORM/Entity.cls
@@ -81,14 +81,17 @@ End Property
 Private Function IRecord_Create(ByRef rs As Recordset) As IRecord
     Dim result As Entity
     Set result = New Entity
+    Dim et As EntityType
     With result
         .ID = rs.Fields("ID")
         .Name = rs.Fields(ENTITY_FIELDNAME)
-        Set .EntityType = New EntityType
-        .EntityType.ID = CDbl(rs.Fields(modConstants.ENTITYTYPE_FIELDNAME)) * -1
+        Set et = modPlaceholderRecords.CreateEntityType(rs.Fields(modConstants.ENTITYTYPE_FIELDNAME))
+        Set .EntityType = et
+        '.EntityType.ID = CDbl(rs.Fields(modConstants.ENTITYTYPE_FIELDNAME)) * -1
     End With
     Set IRecord_Create = result
 End Function
+
 
 Public Function ToString() As String
     ToString = this.ID & "# " & this.Name
